// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bar Spacing Decorator 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "marginTop": 20,
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
  >
    I am in Storybook!
  </Text>
</View>
`;

exports[`Centered Decorator 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "bottom": 0,
      "flex": 1,
      "flexDirection": "row",
      "justifyContent": "center",
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
  >
    I am in Storybook!
  </Text>
</View>
`;

exports[`Lateral Spacing Decorator 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "marginLeft": 20,
      "marginRight": 20,
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
  >
    I am in Storybook!
  </Text>
</View>
`;

exports[`The showcase converter should add a decorator between stories 1`] = `
Array [
  Object {
    "component": <StrictWrapper>
      <div>
        Hello World!
      </div>
    </StrictWrapper>,
    "name": "My Story",
  },
  <div>
    Some decorator
  </div>,
  Object {
    "component": <StrictWrapper>
      <div>
        Hello World Again!
      </div>
    </StrictWrapper>,
    "name": "My Story 2",
  },
]
`;

exports[`The showcase converter should add a single story 1`] = `
Array [
  Object {
    "component": <StrictWrapper>
      <div>
        Hello World!
      </div>
    </StrictWrapper>,
    "name": "My Story",
  },
]
`;

exports[`The showcase converter should add a story with a decorator 1`] = `
Array [
  <div>
    Some decorator
  </div>,
  Object {
    "component": <StrictWrapper>
      <div>
        Hello World!
      </div>
    </StrictWrapper>,
    "name": "My Story",
  },
]
`;

exports[`The showcase converter should add two stories 1`] = `
Array [
  Object {
    "component": <StrictWrapper>
      <div>
        Hello World!
      </div>
    </StrictWrapper>,
    "name": "My Story 1",
  },
  Object {
    "component": <StrictWrapper>
      <div>
        Hello World Again!
      </div>
    </StrictWrapper>,
    "name": "My Story 2",
  },
]
`;

exports[`The showcase converter should filter stories by platform 1`] = `
Array [
  Object {
    "component": <StrictWrapper>
      <div>
        All!
      </div>
    </StrictWrapper>,
    "name": "All platforms",
  },
  Object {
    "component": <StrictWrapper>
      <div>
        iOS!
      </div>
    </StrictWrapper>,
    "name": "iOS only",
  },
  Object {
    "component": <StrictWrapper>
      <div>
        Native!
      </div>
    </StrictWrapper>,
    "name": "Native only",
  },
]
`;

exports[`The showcase converter should provide the action to a story 1`] = `
Array [
  Object {
    "component": <StrictWrapper>
      <div>
        Hello World!
      </div>
    </StrictWrapper>,
    "name": "My Story",
  },
]
`;

exports[`The showcase converter should provide the color knob to a story 1`] = `
Array [
  Object {
    "component": <StrictWrapper>
      <div
        color="red"
      >
        Hello World!
      </div>
    </StrictWrapper>,
    "name": "My Story",
  },
]
`;

exports[`The showcase converter should provide the select knob to a story 1`] = `
Array [
  Object {
    "component": <StrictWrapper>
      <div
        color="red"
      >
        Hello World!
      </div>
    </StrictWrapper>,
    "name": "My Story",
  },
]
`;

exports[`The showcase converter should turn off strict mode 1`] = `
Array [
  Object {
    "component": <div>
      Hello World!
    </div>,
    "name": "My Story",
  },
]
`;

exports[`White Background Decorator 1`] = `
<View
  style={
    Object {
      "backgroundColor": "white",
      "bottom": 0,
      "flex": 1,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
  >
    I am in Storybook!
  </Text>
</View>
`;
